--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
 		"@types/node": "^16.11.13",
 		"@types/react": "^17.0.37",
 		"@types/react-dom": "^17.0.11",
+		"@types/react-icons": "^3.0.0",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
 		"graphql-request": "^3.7.0",
 		"prettier": "^2.5.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
+		"react-loader-spinner": "^4.0.0",
 		"react-query": "^3.34.4",
 		"react-router-dom": "^6.1.1",
 		"react-scripts": "5.0.0",
