--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@cypress/react": "^5.11.0",
+		"@cypress/webpack-dev-server": "^1.8.0",
 		"@emotion/styled": "^11.6.0",
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^12.1.2",
@@ -22,6 +24,7 @@
 		"react-query": "^3.34.4",
 		"react-router-dom": "^6.1.1",
 		"react-scripts": "5.0.0",
+		"ts-jest": "^27.1.2",
 		"typescript": "^4.5.4",
 		"web-vitals": "^2.1.2"
 	},
@@ -32,7 +35,9 @@
 		"eject": "react-scripts eject",
 		"lint": "eslint --config ./.eslintrc.json src/**/*.{ts,tsx}",
 		"format": "prettier --config ./.prettierrc.json --write src/**/*.{ts,tsx}",
-		"format:check": "prettier --config ./.prettierrc.json --check src/**/*.{ts,tsx}"
+		"format:check": "prettier --config ./.prettierrc.json --check src/**/*.{ts,tsx}",
+		"cy:open": "./node_modules/.bin/cypress open",
+		"cy:run": "./node_modules/.bin/cypress run --config-file ./cypress-config.json"
 	},
 	"browserslist": {
 		"production": [
@@ -45,5 +50,10 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@testing-library/react-hooks": "^7.0.2",
+		"cypress": "^9.1.1",
+		"react-test-renderer": "^17.0.2"
 	}
 }
